--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:debug": "nest start --debug --watch -c nest-cli.json",
     "start:prod": "node dist/main",
     "command": "node dist/commander",
-    "command:dev": "ts-node src/commander",
+    "command:dev": "ts-node --project tsconfig.json src/commander",
     "scheduler:dev": "nest start --c nest-cli.scheduler.json --watch",
     "scheduler:debug": "nest start --c nest-cli.scheduler.json --debug --watch",
     "scheduler:prod": "node dist/scheduler",
@@ -38,6 +38,7 @@
     "yarn": "use npm!"
   },
   "dependencies": {
+    "@circle-fin/developer-controlled-wallets": "^6.0.0",
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.4.4",
     "@nestjs/platform-express": "^10.4.4",
@@ -45,9 +46,11 @@
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/typeorm": "^10.0.2",
+    "@solana/web3.js": "^1.98.0",
     "@types/lodash": "^4.17.13",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cockatiel": "^3.2.1",
     "dotenv": "^16.4.7",
     "envalid": "^8.0.0",
     "lodash": "^4.17.21",
@@ -55,12 +58,17 @@
     "nest-commander": "^3.15.0",
     "nest-winston": "^1.9.7",
     "nestjs-pino": "^4.1.0",
+    "node-forge": "^1.3.1",
+    "permissionless": "^0.2.23",
     "pg": "^8.13.1",
     "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
+    "tronweb": "^6.0.0",
     "typeorm": "^0.3.20",
+    "utility-types": "^3.11.0",
     "uuid": "^11.0.3",
+    "viem": "^2.21.55",
     "winston": "^3.17.0"
   },
   "devDependencies": {
