--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/typeorm": "^10.0.2",
+    "@safe-global/protocol-kit": "^5.1.1",
     "@solana/web3.js": "^1.98.0",
     "@types/lodash": "^4.17.13",
     "class-transformer": "^0.5.1",
